--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,21 @@ spring.application.name=BookingReyunos
 # Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/booking_reyunos
 spring.datasource.username=root
-spring.datasource.password=130298
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuracion del mail que enviara las recuperaciones de contraseña
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=utnlosreyunos@gmail.com
+spring.mail.password=devgroup123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 # Configuración de JPA (Java Persistence API)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework.security=DEBUG
 
