--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=utnlosreyunos@gmail.com
-spring.mail.password=devgroup123
+spring.mail.password=gnodqfmobxojanrk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
